config/server/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: diagram
  namespace: system
spec:
  ports:
    - port: 8888
      targetPort: 8888
  selector:
    control-plane: controller-manager
